reduced java version to 11, fixed test